// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering with buttons 1`] = `
[
  {
    "node": <DirectMessage
      buttons={
        <Sociably.Fragment>
          <UrlButton
            label="foo"
            url="http://sociably.io/foo"
          />
          <UrlButton
            label="bar"
            url="http://sociably.io/bar"
          />
          <UrlButton
            label="baz"
            url="http://sociably.io/baz"
          />
        </Sociably.Fragment>
      }
    >
      Guess one
    </DirectMessage>,
    "path": "$",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "message_data": {
                "attachment": undefined,
                "ctas": [
                  {
                    "label": "foo",
                    "type": "web_url",
                    "url": "http://sociably.io/foo",
                  },
                  {
                    "label": "bar",
                    "type": "web_url",
                    "url": "http://sociably.io/bar",
                  },
                  {
                    "label": "baz",
                    "type": "web_url",
                    "url": "http://sociably.io/baz",
                  },
                ],
                "text": "Guess one",
              },
              "target": {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with coordinates 1`] = `
[
  {
    "node": <DirectMessage
      coordinates={
        {
          "latitude": 25.1,
          "longitude": 121.6,
        }
      }
    />,
    "path": "$",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "message_data": {
                "attachment": {
                  "location": {
                    "shared_coordinate": {
                      "coordinates": {
                        "coordinates": [
                          121.6,
                          25.1,
                        ],
                        "type": "Point",
                      },
                    },
                    "type": "shared_coordinate",
                  },
                  "type": "location",
                },
                "text": undefined,
              },
              "target": {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with media 1`] = `
[
  {
    "node": <DirectMessage
      media={
        <Photo
          mediaId="11111"
        />
      }
    />,
    "path": "$",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": [
        {
          "id": "11111",
          "params": {
            "additional_owners": undefined,
            "media_category": undefined,
            "shared": undefined,
          },
          "type": "id",
        },
      ],
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "message_data": {
                "attachment": {
                  "media": {
                    "id": "",
                  },
                  "type": "media",
                },
                "text": undefined,
              },
              "target": {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with placeId 1`] = `
[
  {
    "node": <DirectMessage
      placeId="12345"
    >
      Hello there
    </DirectMessage>,
    "path": "$",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "message_data": {
                "attachment": {
                  "location": {
                    "shared_place": {
                      "place": {
                        "id": "12345",
                      },
                    },
                    "type": "shared_place",
                  },
                  "type": "location",
                },
                "text": "Hello there",
              },
              "target": {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with plain text 1`] = `
[
  {
    "node": <DirectMessage>
      Hello World
    </DirectMessage>,
    "path": "$",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "message_data": {
                "attachment": undefined,
                "text": "Hello World",
              },
              "target": {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with plain text 3`] = `
[
  {
    "node": <DirectMessage
      customProfileId="11111"
    >
      <foo />
    </DirectMessage>,
    "path": "$",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "custom_profile_id": "11111",
              "message_data": {
                "attachment": undefined,
                "text": "foo",
              },
              "target": {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "type": "dm",
    },
  },
]
`;

exports[`rendering with quick replies 1`] = `
[
  {
    "node": <DirectMessage
      quickReplies={
        <Sociably.Fragment>
          <QuickReply
            description="FOOOOOOO"
            label="foo"
            metadata="FOO"
          />
          <QuickReply
            description="BAAAAAAR"
            label="bar"
            metadata="BAR"
          />
          <QuickReply
            description="BAAAAAAZ"
            label="baz"
            metadata="BAZ"
          />
        </Sociably.Fragment>
      }
    >
      Guess one
    </DirectMessage>,
    "path": "$",
    "type": "unit",
    "value": {
      "accomplishRequest": [Function],
      "mediaSources": null,
      "request": {
        "method": "POST",
        "params": {
          "event": {
            "message_create": {
              "message_data": {
                "attachment": undefined,
                "quick_reply": {
                  "options": [
                    {
                      "description": "FOOOOOOO",
                      "label": "foo",
                      "metadata": "FOO",
                    },
                    {
                      "description": "BAAAAAAR",
                      "label": "bar",
                      "metadata": "BAR",
                    },
                    {
                      "description": "BAAAAAAZ",
                      "label": "baz",
                      "metadata": "BAZ",
                    },
                  ],
                  "type": "options",
                },
                "text": "Guess one",
              },
              "target": {
                "recipient_id": "",
              },
            },
            "type": "message_create",
          },
        },
        "url": "1.1/direct_messages/events/new.json",
      },
      "type": "dm",
    },
  },
]
`;
